--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             </p>
               <div class="score-container">0</div>
               <div class="best-container">0</div>
+              <div class="time-container">
+              <div class="time-label">THỜI GIAN</div>
+              <div class="time-value">5:00</div>
+              </div>
               <a class="restart-button" >New Game</a>
           </div>
 
